--- a/build.gradle
+++ b/build.gradle
@@ -25,12 +25,33 @@ dependencies {
 	implementation 'org.springframework.session:spring-session-core'
 	implementation 'org.xerial:sqlite-jdbc:3.36.0.3'
 	implementation 'com.oracle.ojdbc:ojdbc8:19.3.0.0'
+	compileOnly 'com.querydsl:querydsl-core'
+    compileOnly 'com.querydsl:querydsl-jpa'
+	compileOnly 'com.querydsl:querydsl-apt'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
+	annotationProcessor 'com.querydsl:querydsl-apt::jpa'
+	annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
+    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+// query dsl
+def generated='build/generated/sources/headers/java/main'
+sourceSets {
+    main.java.srcDirs += [ generated ]
+}
+
+tasks.withType(JavaCompile) {
+    options.annotationProcessorGeneratedSourcesDirectory = file(generated)
+}
+
+clean.doLast {
+    file(generated).deleteDir()
+}
+// end query dsl
