--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,11 @@ logging.level.org.hibernate=debug
 
 server.port=8080
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.database-platform=com.jhelper.jserve.jdbc.SQLiteDialect
 spring.jpa.show-sql=true
-spring.jpa.database=oracle
-spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
+spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.url=jdbc:oracle:thin:@172.20.30.221:1521:orcl
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.username=seize_org
-spring.datasource.password=seize!2020
+spring.datasource.url=jdbc:sqlite:jhelper.db
+spring.datasource.driver-class-name=org.sqlite.JDBC
+spring.datasource.username=
+spring.datasource.password=
